feat(lotto): 로또 도메인 구현
작업 내용
- 작성된 테스트에 맞춰 로또 구현
- 로또에 사용하기 위해 일부 검증 로직 추가